force-app/main/default/objects/Instructor_Invoice__c/Instructor_Invoice__c.object-meta.xml
<CustomObject>
    <label>Instructor Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructor Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>