force-app/main/default/objects/Instructor_Invoice__c/fields/Billed_To__c.field-meta.xml
<CustomField>
    <fullName>Billed_To__c</fullName>
    <formula>Course__r.Account.Name &amp;  BR() &amp;
 Course__r.Account.BillingStreet  &amp;  BR() &amp;
 Course__r.Account.BillingCity  &amp;  BR() &amp;
 Course__r.Account.BillingState  &amp;  BR() &amp;
 Course__r.Account.BillingCountry  &amp;  BR() &amp;
 Course__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed To</label>
    <type>Text</type>
</CustomField>