force-app/main/default/objects/Instructor_Invoice__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Instructor_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>