force-app/main/default/objects/Instructor_Invoice__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Course__r.Account.Name  &amp;  BR() &amp;
 Course__r.Account.ShippingStreet  &amp;  BR() &amp;
 Course__r.Account.ShippingCity  &amp;  BR() &amp;
 Course__r.Account.ShippingState  &amp;  BR() &amp;
 Course__r.Account.ShippingCountry  &amp;  BR() &amp;
 Course__r.Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>