force-app/main/default/objects/Instructor_Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Instructor_Invoice_Line__c.Amount__c</summarizedField>
    <summaryForeignKey>Instructor_Invoice_Line__c.Instructor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>