force-app/main/default/objects/Instructor_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>